--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,12 @@ project(SudokuSolver)
 set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Werror -pedantic -std=c++14")
 
-include(ExternalProject)
-set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/ext)
+add_subdirectory(ext/ai-cpp/src)
+include_directories(ext/ai-cpp/include)
 
-
-ExternalProject_Add(git-ai-cpp
-    GIT_REPOSITORY https://github.com/obs145628/ai-cpp.git
-    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION}
-)
-
-include_directories(${EXTERNAL_INSTALL_LOCATION}/include)
-link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
-
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
+find_package(SFML REQUIRED system window graphics network audio)
+include_directories(${SFML_INCLUDE_DIR})
 
 set(SRC
   src/backtracking.cc
@@ -30,5 +24,5 @@ set(SRC
 
 
 add_executable(sudoku-solver ${SRC})
-add_dependencies(sudoku-solver git-ai-cpp)
-target_link_libraries(sudoku-solver ai-cpp)
+add_dependencies(sudoku-solver ai-cpp)
+target_link_libraries(sudoku-solver ai-cpp ${SFML_LIBRARIES})
